Add array merge functionality
- Add 'seed' command line option in 'argument_parse' function of 'src/psrs.c'
- Implement 'array_merge' static function in 'src/sort.c'
- Make 'cli_arg' structure definition publicly visible in
the header file 'include/psrs/psrs.h'
- Move 'long_compare' static function from 'src/psrs.c' to 'src/sort.c'

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,7 +5,8 @@
 # SET(BUILD_SHARED_LIBRARIES OFF)
 # SET(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++ -static")
 
-add_executable(psrs psrs.c generator.c timing.c)
+add_executable(psrs psrs.c generator.c sort.c timing.c)
+target_link_libraries(psrs ${CMAKE_THREAD_LIBS_INIT})
 
 # target_link_libraries(timestamp ${CMAKE_THREAD_LIBS_INIT})
 # install(TARGETS main
