Finish phase 3 of the PSRS algorithm
- Add 'Getting Started' section in 'README.md'
- Implement 'list_iter_init', 'list_iter_walk', and 'list_iter_destroy'
functions in 'src/list.c' for manipulating 'list_iter' structure
- Resolve 2 race conditions in 'parallel_sort' function of 'src/sort.c'

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
 endif()
 
 # remember to override this variable if debug info is not needed
-set(CMAKE_BUILD_TYPE "Debug")
+set(CMAKE_BUILD_TYPE "Build")
 
 # add support for YCM
 set(CMAKE_EXPORT_COMPILE_COMMANDS "ON")
