Rewrite moving average calculation functions
- Add a new 'moving_window' structure used for moving average calculation
- Change the signature of 'moving_average_calc' function to make it operate on
'moving_window' structure instead
- Implement 'moving_window_init', 'moving_window_push', and
'moving_window_destroy' functions to manipulate 'moving_window' structure

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,6 +8,7 @@
 add_executable(psrs
     "psrs.c" "generator.c" "list.c" "ring.c" "sort.c" "stats.c" "timing.c")
 target_link_libraries(psrs ${CMAKE_THREAD_LIBS_INIT} m)
+# add_executable(main "main.c" "ring.c" "stats.c")
 
 # target_link_libraries(timestamp ${CMAKE_THREAD_LIBS_INIT})
 # install(TARGETS main
