Migrate the main program to use moving average
- Add 'binary' and 'window' fields in 'cli_arg' structure
- Add binary output option for 'psrs' program
- Add conditional macro definition based on 'CMAKE_BUILD_TYPE' in
'src/CMakeLists.txt'
- Make changes to 'src/psrs.c' and 'src/sort.c' to use moving average facility
- Make changes to 'tools/plot.py' to use the 'binary' flag of 'psrs' program
- Update 'Getting Started' section on new command line flags in 'README.md'

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,6 +7,10 @@
 
 add_executable(psrs
     "psrs.c" "generator.c" "list.c" "ring.c" "sort.c" "stats.c" "timing.c")
+
+if(CMAKE_BUILD_TYPE MATCHES "Debug")
+    target_compile_definitions(psrs PRIVATE  PRINT_DEBUG_INFO=1)
+endif()
 target_link_libraries(psrs ${CMAKE_THREAD_LIBS_INIT} m)
 # add_executable(main "main.c" "ring.c" "stats.c")
 
