Fix the sorting bug in 'parallel_sort' function of 'src/sort.c'
- Add an extra if conditional in root 'CMakeLists.txt' to set cache variable
'CMAKE_BUILD_TYPE' to 'Debug' only if no command line cache definition is given
- Update 'Build Instructions' section in 'README.md' about the extra cmake
cache entry definition

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,12 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
 endif()
 
 # remember to override this variable if debug info is not needed
-set(CMAKE_BUILD_TYPE "Debug")
+if(NOT CMAKE_BUILD_TYPE)
+    set(CMAKE_BUILD_TYPE "Debug" CACHE STRING
+        "Choose the type of build, options are:
+        None Debug Release RelWithDebInfo MinSizeRel."
+        FORCE)
+endif()
 
 # add support for YCM
 set(CMAKE_EXPORT_COMPILE_COMMANDS "ON")
