Finish implementation for first two phases of PSRS
- Expand 'GCC FLAGS' section in root 'CMakeLists.txt'
- Implement 'part_blk' structure along with functions 'part_blk_init' and
'part_blk_destroy' to manipulate it in 'include/psrs/sort.h' and 'src/sort.c'
- Implement per-phase functions 'local_sort', 'pivots_bcast', and
'partition_form' in 'src/sort.c'
- Update 'Getting Started' and 'Speedup Comparison' section on new MPI info in
'README.md'

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -21,6 +21,23 @@ if(CMAKE_BUILD_TYPE MATCHES "Debug")
     target_compile_definitions(psrs PRIVATE  PRINT_DEBUG_INFO=1)
 endif()
 
+# ----------------------------- EXPERIMENTATION -------------------------------
+
+# add_executable(main "main.c")
+#
+# target_link_libraries(main ${MPI_C_LIBRARIES} m)
+# if(MPI_C_COMPILE_FLAGS)
+#       set_target_properties(main
+#           PROPERTIES COMPILE_FLAGS "${MPI_C_COMPILE_FLAGS}")
+# endif()
+#
+# if(MPI_C_LINK_FLAGS)
+#       set_target_properties(main
+#           PROPERTIES LINK_FLAGS "${MPI_C_LINK_FLAGS}")
+# endif()
+
+# ----------------------------- EXPERIMENTATION -------------------------------
+
 # install(TARGETS main
 # RUNTIME DESTINATION /usr/bin      COMPONENT Runtime)
 # LIBRARY DESTINATION lib      COMPONENT Runtime
