Implement per-phase timing in the core PSRS function
- Add 'moving_stdev_calc' invocation in both 'sequential_sort' and
'parallel_sort' functions of 'src/sort.c'
- Add 'phase' member in 'struct cli_arg' of 'include/psrs/psrs.h'
- Add 'phase' related command line handling in 'argument_parse' of 'src/psrs.c'
- Implement standard deviation calculation function 'moving_stdev_calc' in
'src/stats.c'
- Move the moving average calculation instructions from 'sort_launch' into
a new function 'parallel_sort' in 'src/sort.c'
- Rename the old 'parallel_sort' function to 'psort_start' in 'src/sort.c'
- Split the output writing instructions in 'sort_launch' into a new function
'output_write' in 'src/sort.c'
- Update instructions on the new 'tools/prepare.sh' script in 'Build
Instructions' section of 'README.md'

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,7 +39,7 @@ set(CMAKE_C_STANDARD_REQUIRED ON)
 # set(GCC_SANITIZE_UNDEFINED_FLAG "-fsanitize=undefined")
 
 set(GCC_WARN_ALL "-Wall")
-set(GCC_WARN_EXTRA "-Wextra")
+# set(GCC_WARN_EXTRA "-Wextra")
 
 # issue warning if comparison operators are directly used for floats
 set(GCC_WARN_FLOAT_EQUAL_FLAG "-Wfloat-equal")
@@ -67,7 +67,7 @@ add_compile_options(
     # ${GCC_SANITIZE_LEAK_FLAG}
     # ${GCC_SANITIZE_UNDEFINED_FLAG}
     ${GCC_WARN_ALL}
-    ${GCC_WARN_EXTRA}
+    # ${GCC_WARN_EXTRA}
     ${GCC_WARN_FLOAT_EQUAL_FLAG}
     ${GCC_WARN_SHADOW_FLAG}
     ${GCC_WARN_POINTER_ARITH}
